added about me section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,36 @@
         <section firstphoto><img src="./assets/images/succulant.jpg " id="table" alt="different succulants on a table"></section>
     </section>
 
+    <section content class="container">
+<article about me id="aboutme">
+<h2>About Me</h2></article>
+<article id="abouttext">
+<p> This is the about me section. I am currently in the UPenn full stack coding bootcamp. I enjoy reading, writing, spending time with family. 
+    I have three kids and two cats. My favorite color is orange. I enjoy Disney movies and going on Disney cruises. I'm still trying to figure out 
+    what I want to do when I grow up. 
+    This is the about me section. I am currently in the UPenn full stack coding bootcamp. I enjoy reading, writing, spending time with family. 
+    I have three kids and two cats. My favorite color is orange. I enjoy Disney movies and going on Disney cruises. I'm still trying to figure out 
+    what I want to do when I grow up. 
+    This is the about me section. I am currently in the UPenn full stack coding bootcamp. I enjoy reading, writing, spending time with family. 
+    I have three kids and two cats. My favorite color is orange. I enjoy Disney movies and going on Disney cruises. I'm still trying to figure out 
+    what I want to do when I grow up. </p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </section>
+
 
 
 
