added a work section and a contact section

--- a/index.html
+++ b/index.html
@@ -32,10 +32,31 @@
     what I want to do when I grow up. 
     This is the about me section. I am currently in the UPenn full stack coding bootcamp. I enjoy reading, writing, spending time with family. 
     I have three kids and two cats. My favorite color is orange. I enjoy Disney movies and going on Disney cruises. I'm still trying to figure out 
-    what I want to do when I grow up. </p>
-
-
-
+    what I want to do when I grow up. </p></article></section>
+<br>
+<br>
+<br>
+<section content class="container">
+    <article my projects id="mywork">
+        <h2>My Work</h2></article>
+        <article id="worktext" id="photos">
+        <p> Placeholder photos for work goes here
+<!-- <img src="./assets/images/cactus.jpg" alt="a white cup with a cactus in it">
+<img src="./assets/images/heart.jpg" alt="succulants in a flower pot in the shape of a heart">
+<img src="./assets/images/pink.jpg" alt="succulants in a pink flower pot">
+<img src="./assets/images/table.jpg" alt="multiple succulents sitting on a table">
+<img src="./assets/images/succulant.jpg" alt="succulant in stone flowerpot">  -->
+        </article></p></body></section>
+        <br>
+        <br>
+        <br>
+        <section content class="container">
+            <article my projects id="contact">
+                <h2>Contact Me</h2></article>
+                Email 
+                Phone 
+                GitHub
+                </article></p></body></section>
 
 
 
