added images, links for nav, added contact info

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Courtney Einsig</h1>
     <section nav class="nav">
         <ul>
-            <li><a href="#about me">About</a></li>
-            <li><a href="#my work">Works</a></li>
-            <li><a href="#contact me">Contact</a></li>
+            <li><a href="#aboutme">About</a></li>
+            <li><a href="#mywork">My Work</a></li>
+            <li><a href="#contact">Contact</a></li>
             <li><a href="#resume">Resume</a></li>
         </ul></section>
         <section firstphoto><img src="./assets/images/succulant.jpg " id="table" alt="different succulants on a table"></section>
@@ -40,12 +40,12 @@
     <article my projects id="mywork">
         <h2>My Work</h2></article>
         <article id="worktext" id="photos">
-        <p> Placeholder photos for work goes here
-<!-- <img src="./assets/images/cactus.jpg" alt="a white cup with a cactus in it">
+        <p> 
+<img src="./assets/images/cactus.jpg" alt="a white cup with a cactus in it">
 <img src="./assets/images/heart.jpg" alt="succulants in a flower pot in the shape of a heart">
 <img src="./assets/images/pink.jpg" alt="succulants in a pink flower pot">
 <img src="./assets/images/table.jpg" alt="multiple succulents sitting on a table">
-<img src="./assets/images/succulant.jpg" alt="succulant in stone flowerpot">  -->
+<img src="./assets/images/succulant.jpg" alt="succulant in stone flowerpot"> 
         </article></p></body></section>
         <br>
         <br>
@@ -53,8 +53,8 @@
         <section content class="container">
             <article my projects id="contact">
                 <h2>Contact Me</h2></article>
-                Email 
-                Phone 
+                717-476-1147 
+                cmneiderer@gmail.com 
                 GitHub
                 </article></p></body></section>
 
