--- a/index.html
+++ b/index.html
@@ -10,91 +10,71 @@
 <body>
     <section cover class="header">
         <h1>Courtney Einsig</h1>
-    <section nav class="nav">
-        <ul>
-            <li><a href="#aboutme">About</a></li>
-            <li><a href="#mywork">My Work</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#resume">Resume</a></li>
-        </ul></section>
-        <section firstphoto><img src="./assets/images/succulant.jpg " id="table" alt="different succulants on a table"></section>
+        <section nav class="nav">
+            <ul>
+                <li><a href="#aboutme">About</a></li>
+                <li><a href="#mywork">My Work</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#resume">Resume</a></li>
+            </ul>
+        </section>
+        <section firstphoto><img src="./assets/images/succulant.jpg " id="table" alt="different succulants on a table">
+        </section>
     </section>
 
     <section content class="container">
-<article about me id="aboutme">
-<h2>About Me</h2></article>
-<article id="abouttext">
-<p> This is the about me section. I am currently in the UPenn full stack coding bootcamp. I enjoy reading, writing, spending time with family. 
-    I have three kids and two cats. My favorite color is orange. I enjoy Disney movies and going on Disney cruises. I'm still trying to figure out 
-    what I want to do when I grow up. 
-    This is the about me section. I am currently in the UPenn full stack coding bootcamp. I enjoy reading, writing, spending time with family. 
-    I have three kids and two cats. My favorite color is orange. I enjoy Disney movies and going on Disney cruises. I'm still trying to figure out 
-    what I want to do when I grow up. 
-    This is the about me section. I am currently in the UPenn full stack coding bootcamp. I enjoy reading, writing, spending time with family. 
-    I have three kids and two cats. My favorite color is orange. I enjoy Disney movies and going on Disney cruises. I'm still trying to figure out 
-    what I want to do when I grow up. </p></article></section>
+        <article about me id="aboutme">
+            <h2>About Me</h2>
+        </article>
+        <article id="abouttext">
+            <p> This is the about me section. I am currently in the UPenn full stack coding bootcamp. I enjoy reading,
+                writing, spending time with family.
+                I have three kids and two cats. My favorite color is orange. I enjoy Disney movies and going on Disney
+                cruises. I'm still trying to figure out
+                what I want to do when I grow up.
+                This is the about me section. I am currently in the UPenn full stack coding bootcamp. I enjoy reading,
+                writing, spending time with family.
+                I have three kids and two cats. My favorite color is orange. I enjoy Disney movies and going on Disney
+                cruises. I'm still trying to figure out
+                what I want to do when I grow up.
+                This is the about me section. I am currently in the UPenn full stack coding bootcamp. I enjoy reading,
+                writing, spending time with family.
+                I have three kids and two cats. My favorite color is orange. I enjoy Disney movies and going on Disney
+                cruises. I'm still trying to figure out
+                what I want to do when I grow up. </p>
+        </article>
+    </section>
+    <br>
+    <br>
+    <br>
+    <section content class="container">
+        <article my projects id="mywork">
+            <h2>My Work</h2>
+        </article>
+        <article id="worktext">
+            <p> 
+                <img src="./assets/images/cactus.jpg" id="flex1" alt="a white cup with a cactus in it">
+                <img src="./assets/images/heart.jpg"   alt="succulants in a flower pot in the shape of a heart ">
+                <img src="./assets/images/pink.jpg"  alt="succulants in a pink flower pot">
+                <img src="./assets/images/table.jpg"  alt="multiple succulents sitting on a table">
+                <img src="./assets/images/succulant.jpg"  alt="succulant in stone flowerpot">
+        </article>
+        </p>
+</body>
+</section>
 <br>
 <br>
 <br>
 <section content class="container">
-    <article my projects id="mywork">
-        <h2>My Work</h2></article>
-        <article id="worktext" id="photos">
-        <p> 
-<img src="./assets/images/cactus.jpg" alt="a white cup with a cactus in it">
-<img src="./assets/images/heart.jpg" alt="succulants in a flower pot in the shape of a heart">
-<img src="./assets/images/pink.jpg" alt="succulants in a pink flower pot">
-<img src="./assets/images/table.jpg" alt="multiple succulents sitting on a table">
-<img src="./assets/images/succulant.jpg" alt="succulant in stone flowerpot"> 
-        </article></p></body></section>
-        <br>
-        <br>
-        <br>
-        <section content class="container">
-            <article my projects id="contact">
-                <h2>Contact Me</h2></article>
-                717-476-1147 
-                cmneiderer@gmail.com 
-                GitHub
-                </article></p></body></section>
-
-
-
-
-
-
-
-
-
-
-
-
-    </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </body>
+    <article contact me id="contact">
+        <h2>Contact Me</h2>
+    </article>
+    <article id="contacttext">
+    <p>717-476-1147
+    cmneiderer@gmail.com
+    GitHub</p>
+    </article>
+    
+</section>
+</section>
+</body>
