added footer and changed images

--- a/index.html
+++ b/index.html
@@ -77,4 +77,10 @@
     
 </section>
 </section>
+
+
+
+<section footer class="footer">
+    <h1>Thanks for checking out my portfolio!</h1>
+</section>
 </body>
