--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </section>
         <section firstphoto><img src="./assets/images/succulant.jpg " id="table" alt="different succulants on a table">
-        </section>
+            <section id="top-left">Keep On Growing</section>
     </section>
 
     <section content class="container">
@@ -36,7 +36,7 @@
                 writing, spending time with family.
                 I have three kids and two cats. My favorite color is orange. I enjoy Disney movies and going on Disney
                 cruises. I'm still trying to figure out
-                what I want to do when I grow up.
+                what I want to do when I grow
                 This is the about me section. I am currently in the UPenn full stack coding bootcamp. I enjoy reading,
                 writing, spending time with family.
                 I have three kids and two cats. My favorite color is orange. I enjoy Disney movies and going on Disney
@@ -46,41 +46,43 @@
     </section>
     <br>
     <br>
-    <br>
     <section content class="container">
         <article my projects id="mywork">
             <h2>My Work</h2>
         </article>
         <article id="worktext">
-            <p> 
-                <img src="./assets/images/cactus.jpg" id="flex1" alt="a white cup with a cactus in it">
-                <img src="./assets/images/heart.jpg"   alt="succulants in a flower pot in the shape of a heart ">
-                <img src="./assets/images/pink.jpg"  alt="succulants in a pink flower pot">
-                <img src="./assets/images/table.jpg"  alt="multiple succulents sitting on a table">
-                <img src="./assets/images/succulant.jpg"  alt="succulant in stone flowerpot">
+            <a href="https://cmeinsig.github.io/horiseon-refactor/"><img src="./assets/images/pink.jpg" id="flex1" alt="succulants in a pink flower pot"></a>
+            <section id="middle">horiseon-refactor</section>
+            <a href="https://cmeinsig.github.io/portfolio/"><img src="./assets/images/cactus.jpg" class="flex2" alt="a white cup with a cactus in it"></a>
+            <section id="top-left">Keep On Growing</section>
+           <a href="https://github.com/CmEinsig"><img src="./assets/images/heart.jpg" class="flex2"alt="succulants in a flower pot in the shape of a heart "></a>
+           <section id="top-left">Keep On Growing</section>
+            <a href="https://www.google.com/"><img src="./assets/images/table.jpg" class="flex2" alt="multiple succulents sitting on a table"></a>
+            <section id="top-left">Keep On Growing</section>
+            <a href="https://www.google.com/"><img src="./assets/images/succulant.jpg" class="flex2" alt="succulant in stone flowerpot"></a>
         </article>
         </p>
-</body>
-</section>
-<br>
-<br>
-<br>
-<section content class="container">
-    <article contact me id="contact">
-        <h2>Contact Me</h2>
-    </article>
-    <article id="contacttext">
-    <p>717-476-1147
-    cmneiderer@gmail.com
-    GitHub</p>
-    </article>
+    </section>
+    <br>
+    <br>
+    <section content class="container">
+        <article contact me id="contact">
+            <h2>Contact Me</h2>
+        </article>
+        <article id="contacttext" class="nav">
+            <ul>
+                <li>717-476-1147</li>
+                <li><a href="mailto:cmneiderer@gmail.com">Email Me</a></li>
+                <li><a href="https://github.com/CmEinsig">GitHub</a></li>
+            </ul>
+        </article>
+
+    </section>
+    </section>
+
     
-</section>
-</section>
 
-
-
-<section footer class="footer">
-    <h1>Thanks for checking out my portfolio!</h1>
-</section>
+    <section footer class="footer">
+        <h1>Thanks for checking out my portfolio!</h1>
+    </section>
 </body>
