added README and link to resume

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#aboutme">About</a></li>
                 <li><a href="#mywork">My Work</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#resume">Resume</a></li>
+                <li><a href="https://drive.google.com/file/d/14BtXQco--rHUIwAvjBcaD74gGXeQ8JLb/view?usp=sharing">Resume</a></li>
             </ul>
         </section>
         <section firstphoto><img src="./assets/images/succulant.jpg " id="table" alt="different succulants on a table">
@@ -54,11 +54,8 @@
             <a href="https://cmeinsig.github.io/horiseon-refactor/"><img src="./assets/images/pink.jpg" id="flex1" alt="succulants in a pink flower pot"></a>
             <section id="middle">horiseon-refactor</section>
             <a href="https://cmeinsig.github.io/portfolio/"><img src="./assets/images/cactus.jpg" class="flex2" alt="a white cup with a cactus in it"></a>
-            <section id="top-left">Keep On Growing</section>
            <a href="https://github.com/CmEinsig"><img src="./assets/images/heart.jpg" class="flex2"alt="succulants in a flower pot in the shape of a heart "></a>
-           <section id="top-left">Keep On Growing</section>
             <a href="https://www.google.com/"><img src="./assets/images/table.jpg" class="flex2" alt="multiple succulents sitting on a table"></a>
-            <section id="top-left">Keep On Growing</section>
             <a href="https://www.google.com/"><img src="./assets/images/succulant.jpg" class="flex2" alt="succulant in stone flowerpot"></a>
         </article>
         </p>
