--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <a href="https://cmeinsig.github.io/horiseon-refactor/"><img src="./assets/images/pink.jpg" id="flex1" alt="succulants in a pink flower pot"></a>
             <section id="middle">horiseon-refactor</section>
             <a href="https://cmeinsig.github.io/portfolio/"><img src="./assets/images/cactus.jpg" class="flex2" alt="a white cup with a cactus in it"></a>
-           <a href="https://github.com/CmEinsig"><img src="./assets/images/heart.jpg" class="flex2"alt="succulants in a flower pot in the shape of a heart "></a>
+           <a href="https://cmeinsig.github.io/Project-What-2-Watch/"><img src="./assets/images/heart.jpg" class="flex2"alt="succulants in a flower pot in the shape of a heart "></a>
             <a href="https://www.google.com/"><img src="./assets/images/table.jpg" class="flex2" alt="multiple succulents sitting on a table"></a>
             <a href="https://www.google.com/"><img src="./assets/images/succulant.jpg" class="flex2" alt="succulant in stone flowerpot"></a>
         </article>
