--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
             <section id="top-left">Keep On Growing</section>
     </section>
 
+        <!-- About Me section -->
     <section content class="container">
         <article about me id="aboutme">
             <h2>About Me</h2>
+            <section myphoto><img src="./assets/images/Me.jpg" id="photo" alt="A photo of me sitting at a table inspired by beauty and the beast"></section>
         </article>
         <article id="abouttext">
             <p> This is the about me section. I am currently in the UPenn full stack coding bootcamp. I enjoy reading,
@@ -46,6 +48,7 @@
     </section>
     <br>
     <br>
+        <!-- My Projects section -->
     <section content class="container">
         <article my projects id="mywork">
             <h2>My Work</h2>
@@ -54,14 +57,19 @@
             <a href="https://cmeinsig.github.io/horiseon-refactor/"><img src="./assets/images/pink.jpg" id="flex1" alt="succulants in a pink flower pot"></a>
             <section id="middle">horiseon-refactor</section>
             <a href="https://cmeinsig.github.io/portfolio/"><img src="./assets/images/cactus.jpg" class="flex2" alt="a white cup with a cactus in it"></a>
+            <section id="middleRight">Portfolio</section>
            <a href="https://github.com/CmEinsig"><img src="./assets/images/heart.jpg" class="flex2"alt="succulants in a flower pot in the shape of a heart "></a>
-            <a href="https://www.google.com/"><img src="./assets/images/table.jpg" class="flex2" alt="multiple succulents sitting on a table"></a>
+           <section id="middleLeft">GitHub Repo</section>
+            <a href="https://cmeinsig.github.io/Project-What-2-Watch/"><img src="./assets/images/table.jpg" class="flex2" alt="multiple succulents sitting on a table"></a>
+            <section id="bottomRight">Project-What-2-Watch</section>
             <a href="https://www.google.com/"><img src="./assets/images/succulant.jpg" class="flex2" alt="succulant in stone flowerpot"></a>
+            <section id="bottomLeft">Placeholder</section>
         </article>
         </p>
     </section>
     <br>
     <br>
+    <!-- Contact Me section -->
     <section content class="container">
         <article contact me id="contact">
             <h2>Contact Me</h2>
