--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
             <section myphoto><img src="./assets/images/Me.jpg" id="photo" alt="A photo of me sitting at a table inspired by beauty and the beast"></section>
         </article>
         <article id="abouttext">
-            <p> This is the about me section. I am currently in the UPenn full stack coding bootcamp. I enjoy reading,
-                writing, spending time with family.
-                I have three kids and two cats. My favorite color is orange. I enjoy Disney movies and going on Disney
-                cruises. I'm still trying to figure out
-                what I want to do when I grow up.
+            <p> Hey there! I'm Courtney, an aspiring full-stack developer. In May 2020, earned my associates degree from Harrisburg Area Community College in Business Management. In June 2023, I earned my full-stack certification from University of Pennsylvania. 
+                I have 10 years in the logistics field, but am looking for a career change. I've always been drawn to computer coding, even as a child. I'm excited that I get to explore this career change and dream come true. My next steps are to go to Western Governors University
+                and pursue a bachelor's degree in Software Engineering. In addition to the bachelor's degree, I also want to pursue a SCRUM Master Certification. I'm always learning, exploring, and putting my heart into things that are important to me.  
                  </p>
         </article>
     </section>
@@ -45,18 +43,38 @@
             <h2>My Work</h2>
         </article>
         <article id="worktext">
-            <a href="https://cmeinsig.github.io/horiseon-refactor/"><img src="./assets/images/pink.jpg" id="flex1" alt="succulants in a pink flower pot"></a>
-            <section id="middle">horiseon-refactor</section>
+            <a href="https://infinite-harbor-94913.herokuapp.com/"><img src="./assets/images/pink.jpg" id="flex1" alt="succulants in a pink flower pot"></a>
+            <section id="middle">Project Portfoli-yo</section>
             <a href="https://cmeinsig.github.io/portfolio/"><img src="./assets/images/cactus.jpg" class="flex2" alt="a white cup with a cactus in it"></a>
             <section id="middleRight">Portfolio</section>
-           <a href="https://github.com/CmEinsig"><img src="./assets/images/heart.jpg" class="flex2"alt="succulants in a flower pot in the shape of a heart "></a>
-           <section id="middleLeft">GitHub Repo</section>
+           <a href="https://hbgelite.org/"><img src="./assets/images/heart.jpg" class="flex2"alt="succulants in a flower pot in the shape of a heart "></a>
+           <section id="middleLeft">HBGElite</section>
             <a href="https://cmeinsig.github.io/Project-What-2-Watch/"><img src="./assets/images/table.jpg" class="flex2" alt="multiple succulents sitting on a table"></a>
-            <section id="bottomRight">Project-What-2-Watch</section>
+            <section id="bottomRight">Project What-2-Watch</section>
             <a href="https://www.google.com/"><img src="./assets/images/succulant.jpg" class="flex2" alt="succulant in stone flowerpot"></a>
             <section id="bottomLeft">Placeholder</section>
         </article>
         </p>
+    </section>
+    <br>
+    <br>
+    <section content class="container">
+        <article about me id="mySkills">
+            <h2>My skills</h2>
+        </article>
+        <article id="skillsText">
+            <p> <ul>GitHub</ul>
+                <ul>Heroku</ul>
+                <ul>HTML</ul>
+                <ul>CSS</ul>
+                <ul>JavaScript</ul>
+                <ul>React</ul>
+                <ul>Express/Handlebars</ul>
+                <ul>APIs</ul>
+                <ul>Node Js</ul>
+                <ul>WordPress</ul> 
+                 </p>
+        </article>
     </section>
     <br>
     <br>
@@ -70,6 +88,7 @@
                 <li>717-476-1147</li>
                 <li><a href="mailto:cmneiderer@gmail.com">Email Me</a></li>
                 <li><a href="https://github.com/CmEinsig">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/cmneiderer/">LinkedIn</a></li>
             </ul>
         </article>
 
